# mmry

./: .gitignore  CLAUDE.md  DOCUMENT.md  Makefile  README.md  main.py  pyproject.toml  test.py
mmry/: client.py  config.py  factory.py  memory_manager.py
mmry/base/: llm_base.py  vectordb_base.py
mmry/embedding/: __init__.py  openrouter_embedding.py
mmry/llms/: openrouter_base.py  openrouter_context_builder.py  openrouter_merger.py  openrouter_summariser.py
mmry/utils/: decay.py  logger.py  scoring.py
mmry/vector_store/: qdrant.py
mmry_evals/: Makefile  README.md  config.py  evals.py  generate_scores.py  prompts.py  run_evals.py
mmry_evals/metrics/: llm_judge.py  utils.py
mmry_evals/src/: mmry_eval_manager.py
src/: memory_manager.py  memory_store.py
